--- a/homeworkOne.tex
+++ b/homeworkOne.tex
@@ -20,7 +20,7 @@
 \newcommand{\scriptr}{\mathcalligra{r}\,}
 \newcommand{\boldscriptr}{\pmb{\mathcalligra{r}}\,}
 
-\definecolor{hwColor}{HTML}{AD53BA}
+\definecolor{hwColor}{HTML}{691F80}
 
 \begin{document}
 
@@ -159,6 +159,62 @@
 
       \item Find the energy density $u_{em}$ and the Poynting vector $S$ in the gap. Note especially 
       the direction of $S$. Check that $Eq. 8.12$ is satisfied.
+
+        \textcolor{hwColor}{
+          \\
+          Eq 8.5 gives the total energy stored in electromagnetic fields as
+          \\
+          \\
+          $
+            u_{em}=\dfrac{1}{2} \left(\epsilon_0 E^2 + \dfrac{1}{\mu_0} B^2\right)
+            =\dfrac{1}{2} \left(\epsilon_0  \dfrac{I^2 ~ t^2}{\epsilon_0^2 \pi^2 a^4} + \dfrac{1}{\mu_0}  \mu_0^2 \dfrac{I^2 ~ s^2}{4 \pi^2 a^4} \right)
+            =\dfrac{1}{2} \left(\dfrac{I^2 ~ t^2}{\epsilon_0 \pi^2 a^4} + \dfrac{\mu_0 I^2 ~ s^2}{4 \pi^2 a^4} \right)
+            \\
+            \\
+            \\
+            \therefore ~~~ u_{em}=\dfrac{I^2}{2\pi^2 a^4} \left(\dfrac{t^2}{\epsilon_0} + \dfrac{\mu_0 s^2}{4} \right) ~~~~ \checkmark
+            \\
+            \\
+          $
+          The Poynting vector is defined in Griffiths as
+          \\
+          \\
+          $
+            \overrightarrow{S} \equiv \dfrac{1}{\mu_0} \left(E \times B\right)
+            =\dfrac{1}{\mu_0} \left(
+              \dfrac{I ~ t}{\epsilon_0 \pi a^2} \hat{z} 
+              \times 
+              \mu_0 \dfrac{I ~ s}{2 \pi a^2} \hat{\phi}
+            \right)
+            \\
+            \\
+            \\
+            \therefore ~~~ \overrightarrow{S}=-\dfrac{I^2 t s}{2 \pi^2 \epsilon_0 a^4} \hat{s} ~~~~ \checkmark
+          $
+          \\
+          \\
+          The direction of $\overrightarrow{S}$ is in the $\hat{s}$ direction. We know that the direction of Poynting vector is 
+          the direction of energy flow. Hence, the energy is flowing into the gap. Now we need to check that $Eq. 8.12$ is satisfied.
+          $
+            \dfrac{\partial u_{em}}{\partial t}=-\nabla.S  ~~~~~ Eq. 8.12.
+            \\
+            \\
+            \begin{cases}
+              \dfrac{\partial u_{em}}{\partial t}
+              =\dfrac{\partial}{\partial t} \left[\dfrac{I^2}{2\pi^2 a^4} \left(\dfrac{t^2}{\epsilon_0} + \dfrac{\mu_0 s^2}{4} \right)\right]
+              =\dfrac{I^2 t}{\pi^2 a^4 \epsilon_0}
+              \\
+              \\
+              -\nabla.S=-\dfrac{1}{s} \dfrac{\partial}{\partial s} \left(s S\right)
+              =-\dfrac{1}{s} \dfrac{\partial}{\partial s} \left(-s \dfrac{I^2 t s}{2 \pi^2 \epsilon_0 a^4}\right)
+              =\dfrac{I^2 t}{\pi^2 \epsilon_0 a^4}
+            \end{cases} \Longrightarrow \dfrac{\partial u_{em}}{\partial t}=-\nabla.S ~~~~ \checkmark
+          $
+          \\
+          \\
+          \\
+          As we just saw, $Eq. 8.12$ holds. 
+        }
 
 
       \item Determine the total energy in the gap, as a function of time. Calculate the total
