--- a/homeworkOne.tex
+++ b/homeworkOne.tex
@@ -556,11 +556,113 @@
     magnetization $M$ (not necessarily in the same direction). Find the electromagnetic momentum of this configuration.
     [Answer: $\dfrac{4}{9} \pi \mu_0 R^3 (M \times P)$]
     
+      \textcolor{hwColor}{
+        \\
+        For a sphere we have the following fields (based on the previouse chapters).
+        \\
+        \\
+        $
+          E=\begin{cases}
+            r<R: ~~~ -\dfrac{1}{3 \epsilon_0} P
+            \\
+            \\
+            r>R: ~~~ \dfrac{1}{4 \pi \epsilon_0} \dfrac{3(p.\hat{r})\hat{r-p}}{r^3}
+          \end{cases}
+          \\
+          \\
+          \\
+          B=\begin{cases}
+            r<R: ~~~ \dfrac{2}{3} \mu_0 M
+            \\
+            \\
+            r>R: ~~~ \dfrac{\mu_0}{4\pi} \dfrac{m \left(3(m.\hat{r})\hat{r}-m\right)}{r^3}
+          \end{cases}
+          \\
+          \\
+          \\
+          \begin{cases}
+            m=\dfrac{4}{3} \pi R^3 ~ M
+            \\
+            \\
+            p=\dfrac{4}{3} \pi R^3 ~ P
+          \end{cases}
+        $
+        \\
+        \\
+        Also we learned that $p=\epsilon_0 \bigints \left(E \times B\right) d\tau$.
+        \\
+        \\
+        $
+          p_{inside}=\epsilon_0 \bigints \left(-\dfrac{P}{3 \epsilon_0}\right) \times \left(\dfrac{2 \mu_0 M}{3}\right) d\tau
+          =-\dfrac{8}{27} \mu_0 \pi R^3 \left(P \times M\right)
+          =\dfrac{8}{27} \mu_0 \pi R^3 \left(M \times P\right)
+          \\
+          \\
+          \\
+          P_{outside}=\epsilon_0 \dfrac{1}{4 \pi \epsilon_0} \dfrac{\mu_0}{4 \pi} \bigints \dfrac{1}{r^6} 
+          \left[
+            \left[3(p.\hat{r}) \hat{r}-p\right]
+            \times 
+            \left[3(m.\hat{r})\hat{r}-m\right]
+          \right] d\tau
+          \\
+          \\
+          \\
+          \hat{r} \times (p \times m)=p(\hat{r}.m)-m(\hat{r}.p)
+          \\
+          \\
+          \hat{r} \times \left(\hat{r} \times (p \times m)\right)=\left(\hat{r}.m\right)\left(\hat{r} \times p\right)-\left(\hat{r}.p\right) \left(\hat{r} \times m\right)
+          \\
+          \\
+          \therefore ~~~ \left[3(p.\hat{r})\hat{r}-p\right] \times \left[3(m.\hat{r})\hat{r}-m\right]=-3 \left(p.\hat{r}\right) \left(\hat{r} \times m\right)
+          +3 \left(m.\hat{r}\right) \left(\hat{r} \times p\right)+\left(p \times m\right)
+          \\
+          \\
+          =3 \left[\hat{r} (\hat{r}.(p \times m))-(p \times m)\right]+(p \times m)+3 \hat{r} \left[\hat{r}.(p \times m)\right]
+          \\
+          \\
+          \\
+          \therefore ~~~ p_{outside}=\dfrac{\mu_0}{16 \pi^2} \bigints \dfrac{1}{r^6} 
+          \left[
+            -2 \left(p \times m\right)+3 \hat{r} \left(\hat{r}.(p \times m)\right)
+          \right] ~ r^2 ~ sin(\theta) ~ dr ~ d\theta ~ d\phi
+          \\
+          \\
+          \\
+          p_{outside}=\dfrac{\mu_0}{16} \bigints\limits_{0}^{+\infty} \dfrac{1}{r^4} dr \times 
+          \left[
+            \left(-2(p \times m)\right) \bigints sin(\theta) ~ d\theta ~ d\phi+3 (p \times m) \hat{z}
+            \bigints cos^2(\theta) ~ sin(\theta) ~ d\theta ~ d\phi
+          \right]
+          \\
+          \\
+          \\
+          =\dfrac{\mu_0}{16 \pi^2} \left(-\dfrac{1}{3 r^3}\right)_{R}^{+\infty} 
+          \left(
+            -8 \pi (p \times m)+\dfrac{12 \pi}{3} (p \times m)
+          \right)
+          \\
+          \\
+          =-\dfrac{\mu_0}{12 \pi R^3} \left(\dfrac{4}{3} \pi R^3 P\right) \times \left(\dfrac{4}{3} \pi R^3 M\right)
+          =\dfrac{4 \mu_0 R^3}{27} \left(M \times P\right)
+          \\
+          \\
+          \\
+          p_{total}=p_{inside}+p_{outside}
+          =\left[
+            \dfrac{8}{27} \mu_0 \pi R^3 \left(M \times P\right)
+          \right]+\left[
+            \dfrac{4 \mu_0 R^3}{27} \left(M \times P\right)
+          \right]=\dfrac{12}{27} \mu_0 \pi R^3 \left(M \times P\right)
+          \\
+          \\
+          \\
+          \therefore ~~~ p_{total}=\dfrac{4}{9} \mu_0 \pi R^3 \left(M \times P\right) ~~~~ \checkmark
+          \\
+        $
+      }
 
-      % \textcolor{hwColor}{
-      %   \\
-
-      % }
+    \pagebreak
 
     \item \textbf{(8.17. 35 pts)} Picture the electron as a uniformly charged spherical shell, with
     charge $e$ and radius $R$, spinning at angular velocity $\omega$.
@@ -638,7 +740,7 @@
               \\
               \\
               Q \longrightarrow e
-            \end{cases} \\Longrightarrow L=\dfrac{\mu_0 \omega e^2 R}{18 \pi} ~ \hat{z} ~~~~ \checkmark
+            \end{cases} \Longrightarrow L=\dfrac{\mu_0 \omega e^2 R}{18 \pi} ~ \hat{z} ~~~~ \checkmark
             \\
           $
         }
