--- a/homeworkOne.tex
+++ b/homeworkOne.tex
@@ -501,7 +501,7 @@
       
         \textcolor{hwColor}{
           \\
-          Now one of the charges has to have opposite charge. The steps are the pretty much the same. 
+          Now one of the charges has to have opposite charge. The steps are pretty much the same. 
           \\
           \\
           $
