--- a/homework2.tex
+++ b/homework2.tex
@@ -61,9 +61,19 @@
     the wave equation, and express it as the sum of a wave traveling to the left and a wave traveling to the 
     right (Eq. 9.6).
 
-      % \textcolor{hwColor}{
-      %   \\
-      % }
+      \textcolor{hwColor}{
+        \\
+        Before we start, let's remind ourselves what the standing waves are. The standing waves, also known as stationary waves
+        are the combination of two waves moving in opposite directions, each having the same amplitude and frequency. The 
+        phenomenon is the result of interference. The standing waves do not move at all which is due to the destructive interference
+        where the waves are canceling each other out. And we call those in physics nodes, areas where it is not moving. We have 
+        total constructive interference in certain areas, and we call those antinodes. That is where it is moving the maximum
+        amount back and forth. An example of standing waves can be found in instruments like the cello.
+        \begin{center}
+          \includegraphics[height=5cm, width=10cm]{QuestionOne.JPG}
+        \end{center}
+        Behnam
+      }
 
     \item \textbf{(9.4. 20 pts)} Obtain Eq. 9.20 directly from the wave equation, by separation of variables.
 
